Closed Bug 866947 Opened 12 years ago Closed 12 years ago

nsDocument.cpp:8933:54: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla23

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

New build warning: { content/base/src/nsDocument.cpp:8933:54: warning: comparison between signed and unsigned integer expressions [-Wsign-compare] mImageTracker.Count() < sOnloadDecodeLimit)) ^ } sOnloadDecodeLimit is signed, and mImageTracker.Count() is unsigned (from http://mxr.mozilla.org/mozilla-central/source/xpcom/glue/nsBaseHashtable.h#86 )
I suspect we should just make this pref an unsigned value. It's a count limit, and a negative count is nonsensical (as is a negative limit on a count).
Attachment #743311 - Flags: review?(justin.lebar+bug)
Attachment #743311 - Flags: review?(justin.lebar+bug) → review+
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: