Bug 866947: Make nsDocument.cpp's static-var "sOnloadDecodeLimit" unsigned, to fix build warning for signed/unsigned comparison. r=jlebar